<resources>
    <string name="app_name">MaterialDesign</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="text_label_1">Repair</string>
    <string name="text_label_2">Edit</string>
    <string name="text_label_3">Fort</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repair_fragment">Repair Fragment</string>
    <string name="edit_fragment">edit fragment</string>
    <string name="fort_fragment">Fort Fragment</string>
<string name="title">Title</string>
<string name="secondary_text">Secondary text</string>
<string name="supporting_text">Supporting text</string>
    <string name="action_1">Action 1</string>
    <string name="action_2">Action 2</string>
    <string name="content_description_media">Content description</string>
    <string name="see_detail">see detail</string>
    <string name="not_large_but_very_fast_pirate_ship_in_th_world">Not large? but very fast pirate ship in th world</string>
    <string name="show_snackbar">Show snackbar</string>
</resources>